...
                style: TextStyle(fontSize: 16),
              ),
            ),
            Padding(
              padding: EdgeInsets.symmetric(horizontal: 15),
              child: TextField(
                  key: ValueKey("addPhone"),
                  controller: phoneController,
                  decoration: InputDecoration(
                    border: OutlineInputBorder(),
                    labelText: 'Phone number',
                  )),
            ),

            Padding(
              padding: const EdgeInsets.only(
                  left: 15.0, right: 15.0, top: 15, bottom: 0),
              child: TextField(
                key: Key("addPassword"),
                controller: passwordController,
                obscureText: true,
                decoration: InputDecoration(
                    border: OutlineInputBorder(),
                    labelText: 'Password',
                    hintText:
...
              height: 40,
              width: 250,
              decoration: BoxDecoration(
                  color: Color(0xff28CC9E),
                  borderRadius: BorderRadius.circular(10)),
              child: FlatButton(
                key: Key("loginButton"),
                onPressed: () async {
                     NotificationApi.showNotification(title: "Full Bin Alert", body: "Please come collect the bin as soon as possible",
            payload: 'waste.abs',);
            //Adding bins & binLevels
      Bin bin = Bin(binID: 150, capacity: 10, districtId: 2); //half
      Bin bin1 = Bin(binID: 160, capacity: 25, districtId: 2); // half
...
