...
            ],
          ),
        ),
        body: TabBarView(
          children: [
            Padding(
              key: Key("DriverDashboard"),
              padding:
                  EdgeInsets.only(bottom: 85.0, top: 10, left: 20, right: 20),
              child: loading
                  ? Transform.scale(
                      scale: 0.2,
                      child: CircularProgressIndicator(),
...
